feat: Add Trust Centre page with associated styles, scripts, and navigation link.

--- a/webApp/src/jsMain/resources/index.html
+++ b/webApp/src/jsMain/resources/index.html
@@ -279,6 +279,9 @@
                     <a href="export.html" class="dashboard-link">
                         <span class="material-icons-round">file_upload</span> Export Reports
                     </a>
+                    <a href="trust.html" class="dashboard-link">
+                        <span class="material-icons-round">verified_user</span> Trust Centre
+                    </a>
                     <a href="onboarding.html" class="dashboard-link">
                         <span class="material-icons-round">settings</span> Privacy Settings
                     </a>
