feat: Add threat analysis page with dynamic data display, interaction logic, and styling.

--- a/webApp/src/jsMain/resources/index.html
+++ b/webApp/src/jsMain/resources/index.html
@@ -276,6 +276,9 @@
                     <a href="results.html" class="dashboard-link">
                         <span class="material-icons-round">dashboard</span> Results Dashboard
                     </a>
+                    <a href="threat.html" class="dashboard-link">
+                        <span class="material-icons-round">gpp_maybe</span> Threat Analysis
+                    </a>
                     <a href="export.html" class="dashboard-link">
                         <span class="material-icons-round">file_upload</span> Export Reports
                     </a>
