feat: add 'Beat the Bot' game with dedicated pages and update dashboard link

--- a/webApp/src/jsMain/resources/dashboard.html
+++ b/webApp/src/jsMain/resources/dashboard.html
@@ -351,7 +351,7 @@
                                 </div>
                                 <h4>Training Centre</h4>
                                 <p>Learn how to identify advanced QR homograph attacks.</p>
-                                <a href="#" class="training-link">Start Lesson →</a>
+                                <a href="game.html" class="training-link">Beat the Bot →</a>
                             </div>
                         </div>
                     </div>
