feat: introduce new dashboard and refactor sidebar navigation with updated URL parameter handling

--- a/webApp/src/jsMain/resources/dashboard.html
+++ b/webApp/src/jsMain/resources/dashboard.html
@@ -49,7 +49,7 @@
             </div>
 
             <nav class="sidebar-nav">
-                <div class="nav-section-title">Overview</div>
+                <div class="nav-section-label">Overview</div>
                 <a class="nav-link active" href="dashboard.html" id="nav-dashboard">
                     <span class="material-symbols-outlined filled">dashboard</span>
                     <span>Dashboard</span>
@@ -63,17 +63,17 @@
                     <span>Scan History</span>
                 </a>
 
-                <div class="nav-section-title">Security</div>
+                <div class="nav-section-label">Security</div>
                 <a class="nav-link" href="trust.html" id="nav-allowlist">
                     <span class="material-symbols-outlined">verified_user</span>
                     <span>Allow List</span>
                 </a>
-                <a class="nav-link" href="onboarding.html" id="nav-heuristics">
-                    <span class="material-symbols-outlined">policy</span>
-                    <span>Heuristics Rules</span>
+                <a class="nav-link" href="onboarding.html" id="nav-settings">
+                    <span class="material-symbols-outlined">settings</span>
+                    <span>Settings</span>
                 </a>
 
-                <div class="nav-section-title">Training</div>
+                <div class="nav-section-label">Training</div>
                 <a class="nav-link" href="game.html" id="nav-game">
                     <span class="material-symbols-outlined">sports_esports</span>
                     <span>Beat the Bot</span>
