--- a/webApp/src/jsMain/resources/game.html
+++ b/webApp/src/jsMain/resources/game.html
@@ -49,38 +49,34 @@
             </div>
 
             <nav class="sidebar-nav">
-                <div class="nav-section-title">Main Menu</div>
+                <div class="nav-section-label">Overview</div>
+                <a class="nav-link" href="dashboard.html">
+                    <span class="material-symbols-outlined">dashboard</span>
+                    <span>Dashboard</span>
+                </a>
                 <a class="nav-link" href="scanner.html">
                     <span class="material-symbols-outlined">qr_code_scanner</span>
-                    <span>Scan Monitor</span>
+                    <span>Live Scanner</span>
                 </a>
                 <a class="nav-link" href="threat.html">
                     <span class="material-symbols-outlined">history</span>
                     <span>Scan History</span>
                 </a>
+
+                <div class="nav-section-label">Security</div>
                 <a class="nav-link" href="trust.html">
                     <span class="material-symbols-outlined">verified_user</span>
-                    <span>Safe List</span>
+                    <span>Allow List</span>
                 </a>
-
-                <div class="nav-section-title">Training & Games</div>
-                <a class="nav-link active" href="game.html">
-                    <span class="material-symbols-outlined filled">sports_esports</span>
-                    <span>Beat the Bot</span>
-                </a>
-                <a class="nav-link" href="dashboard.html">
-                    <span class="material-symbols-outlined">school</span>
-                    <span>Learning Centre</span>
-                </a>
-
-                <div class="nav-section-title">System</div>
                 <a class="nav-link" href="onboarding.html">
                     <span class="material-symbols-outlined">settings</span>
                     <span>Settings</span>
                 </a>
-                <a class="nav-link" href="#">
-                    <span class="material-symbols-outlined">help</span>
-                    <span>Support</span>
+
+                <div class="nav-section-label">Training</div>
+                <a class="nav-link active" href="game.html">
+                    <span class="material-symbols-outlined filled">sports_esports</span>
+                    <span>Beat the Bot</span>
                 </a>
             </nav>
 
@@ -221,7 +217,8 @@
                                     <h4>Live Hint</h4>
                                     <p id="hintText">Look closely at the domain structure. Legitimate organisations
                                         rarely use hyphens in the main domain name or generic TLDs like
-                                        <code>.net</code> for core services.</p>
+                                        <code>.net</code> for core services.
+                                    </p>
                                 </div>
                             </div>
                         </div>
