--- a/webApp/src/jsMain/resources/index.html
+++ b/webApp/src/jsMain/resources/index.html
@@ -8,10 +8,13 @@
     <meta name="description"
         content="QR-SHIELD Web - AI-powered phishing detection running entirely in your browser. Scan and analyze URLs for security threats.">
 
-    <!-- Theme Colors -->
     <meta name="theme-color" content="#6C5CE7" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#0D1117" media="(prefers-color-scheme: dark)">
     <meta name="color-scheme" content="dark light">
+
+    <!-- Auto-redirect to new dashboard UI -->
+    <meta http-equiv="refresh" content="0; url=dashboard.html">
+    <script>window.location.replace('dashboard.html');</script>
 
     <title>QR-SHIELD | Premium Web Scanner</title>
 
