--- a/webApp/src/jsMain/resources/results.html
+++ b/webApp/src/jsMain/resources/results.html
@@ -53,37 +53,42 @@
 
                 <!-- Navigation Links -->
                 <nav class="sidebar-nav">
-                    <a class="nav-link" href="scanner.html" id="nav-scanner">
-                        <span class="material-symbols-outlined">qr_code_scanner</span>
-                        <span class="nav-text">Scan Monitor</span>
-                    </a>
-                    <a class="nav-link active" href="index.html" id="nav-dashboard">
-                        <span class="material-symbols-outlined icon-filled">dashboard</span>
+                    <div class="nav-section-label">Overview</div>
+                    <a class="nav-link" href="dashboard.html" id="nav-dashboard">
+                        <span class="material-symbols-outlined">dashboard</span>
                         <span class="nav-text">Dashboard</span>
                     </a>
-                    <a class="nav-link" href="#history" id="nav-history">
-                        <span class="material-symbols-outlined">history</span>
-                        <span class="nav-text">History</span>
+                    <a class="nav-link" href="scanner.html" id="nav-scanner">
+                        <span class="material-symbols-outlined">qr_code_scanner</span>
+                        <span class="nav-text">Live Scanner</span>
                     </a>
-                    <a class="nav-link" href="#whitelist" id="nav-whitelist">
+                    <a class="nav-link active" href="threat.html" id="nav-history">
+                        <span class="material-symbols-outlined icon-filled">history</span>
+                        <span class="nav-text">Scan History</span>
+                    </a>
+
+                    <div class="nav-section-label">Security</div>
+                    <a class="nav-link" href="trust.html" id="nav-allowlist">
                         <span class="material-symbols-outlined">verified_user</span>
-                        <span class="nav-text">Whitelist</span>
+                        <span class="nav-text">Allow List</span>
                     </a>
                     <a class="nav-link" href="onboarding.html" id="nav-settings">
                         <span class="material-symbols-outlined">settings</span>
                         <span class="nav-text">Settings</span>
+                    </a>
+
+                    <div class="nav-section-label">Training</div>
+                    <a class="nav-link" href="game.html" id="nav-game">
+                        <span class="material-symbols-outlined">sports_esports</span>
+                        <span class="nav-text">Beat the Bot</span>
                     </a>
                 </nav>
             </div>
 
             <!-- Sidebar Footer -->
             <div class="sidebar-footer">
-                <a class="nav-link" href="#help">
-                    <span class="material-symbols-outlined">help</span>
-                    <span class="nav-text">Help & Support</span>
-                </a>
                 <div class="version-info">
-                    <span>v2.4.0 (Build 892)</span>
+                    <span>v2.4.1 (Build 892)</span>
                 </div>
             </div>
         </aside>
