--- a/webApp/src/jsMain/resources/scanner.html
+++ b/webApp/src/jsMain/resources/scanner.html
@@ -50,28 +50,34 @@
 
             <!-- Navigation -->
             <nav class="sidebar-nav">
-                <div class="nav-section-label">Main Menu</div>
+                <div class="nav-section-label">Overview</div>
+                <a class="nav-link" href="dashboard.html" id="nav-dashboard">
+                    <span class="material-symbols-outlined">dashboard</span>
+                    <span>Dashboard</span>
+                </a>
                 <a class="nav-link active" href="scanner.html" id="nav-scanner">
                     <span class="material-symbols-outlined filled">qr_code_scanner</span>
-                    <span>Scan Monitor</span>
+                    <span>Live Scanner</span>
                 </a>
-                <a class="nav-link" href="#history" id="nav-history">
+                <a class="nav-link" href="threat.html" id="nav-history">
                     <span class="material-symbols-outlined">history</span>
                     <span>Scan History</span>
                 </a>
-                <a class="nav-link" href="#safelist" id="nav-safelist">
-                    <span class="material-symbols-outlined">verified_user</span>
-                    <span>Safe List</span>
-                </a>
 
-                <div class="nav-section-label">System</div>
+                <div class="nav-section-label">Security</div>
+                <a class="nav-link" href="trust.html" id="nav-allowlist">
+                    <span class="material-symbols-outlined">verified_user</span>
+                    <span>Allow List</span>
+                </a>
                 <a class="nav-link" href="onboarding.html" id="nav-settings">
                     <span class="material-symbols-outlined">settings</span>
                     <span>Settings</span>
                 </a>
-                <a class="nav-link" href="#support" id="nav-support">
-                    <span class="material-symbols-outlined">help</span>
-                    <span>Support</span>
+
+                <div class="nav-section-label">Training</div>
+                <a class="nav-link" href="game.html" id="nav-game">
+                    <span class="material-symbols-outlined">sports_esports</span>
+                    <span>Beat the Bot</span>
                 </a>
             </nav>
 
