--- a/webApp/src/jsMain/resources/threat.html
+++ b/webApp/src/jsMain/resources/threat.html
@@ -52,21 +52,34 @@
             </div>
 
             <nav class="sidebar-nav">
-                <a class="nav-link" href="index.html" id="nav-dashboard">
+                <div class="nav-section-label">Overview</div>
+                <a class="nav-link" href="dashboard.html" id="nav-dashboard">
                     <span class="material-symbols-outlined">dashboard</span>
                     <span>Dashboard</span>
+                </a>
+                <a class="nav-link" href="scanner.html" id="nav-scanner">
+                    <span class="material-symbols-outlined">qr_code_scanner</span>
+                    <span>Live Scanner</span>
                 </a>
                 <a class="nav-link active" href="threat.html" id="nav-history">
                     <span class="material-symbols-outlined filled">history</span>
                     <span>Scan History</span>
                 </a>
-                <a class="nav-link" href="trust.html" id="nav-threat-db">
-                    <span class="material-symbols-outlined">dns</span>
-                    <span>Threat Database</span>
+
+                <div class="nav-section-label">Security</div>
+                <a class="nav-link" href="trust.html" id="nav-allowlist">
+                    <span class="material-symbols-outlined">verified_user</span>
+                    <span>Allow List</span>
                 </a>
                 <a class="nav-link" href="onboarding.html" id="nav-settings">
                     <span class="material-symbols-outlined">settings</span>
                     <span>Settings</span>
+                </a>
+
+                <div class="nav-section-label">Training</div>
+                <a class="nav-link" href="game.html" id="nav-game">
+                    <span class="material-symbols-outlined">sports_esports</span>
+                    <span>Beat the Bot</span>
                 </a>
             </nav>
 
