--- a/webApp/src/jsMain/resources/trust.html
+++ b/webApp/src/jsMain/resources/trust.html
@@ -49,26 +49,35 @@
             </div>
 
             <nav class="sidebar-nav">
-                <a class="nav-link" href="index.html" id="nav-dashboard">
+                <div class="nav-section-label">Overview</div>
+                <a class="nav-link" href="dashboard.html" id="nav-dashboard">
                     <span class="material-symbols-outlined">dashboard</span>
                     <span>Dashboard</span>
                 </a>
+                <a class="nav-link" href="scanner.html" id="nav-scanner">
+                    <span class="material-symbols-outlined">qr_code_scanner</span>
+                    <span>Live Scanner</span>
+                </a>
+                <a class="nav-link" href="threat.html" id="nav-history">
+                    <span class="material-symbols-outlined">history</span>
+                    <span>Scan History</span>
+                </a>
+
+                <div class="nav-section-label">Security</div>
                 <a class="nav-link active" href="trust.html" id="nav-trust">
                     <span class="nav-indicator"></span>
                     <span class="material-symbols-outlined filled">verified_user</span>
                     <span>Trust Centre</span>
                 </a>
-                <a class="nav-link" href="scanner.html" id="nav-scanner">
-                    <span class="material-symbols-outlined">qr_code_scanner</span>
-                    <span>Scan Monitor</span>
+                <a class="nav-link" href="onboarding.html" id="nav-settings">
+                    <span class="material-symbols-outlined">settings</span>
+                    <span>Settings</span>
                 </a>
-                <a class="nav-link" href="#history" id="nav-history">
-                    <span class="material-symbols-outlined">history</span>
-                    <span>Scan History</span>
-                </a>
-                <a class="nav-link" href="#account" id="nav-account">
-                    <span class="material-symbols-outlined">account_circle</span>
-                    <span>Account</span>
+
+                <div class="nav-section-label">Training</div>
+                <a class="nav-link" href="game.html" id="nav-game">
+                    <span class="material-symbols-outlined">sports_esports</span>
+                    <span>Beat the Bot</span>
                 </a>
             </nav>
 
