--- a/webApp/src/jsMain/resources/export.html
+++ b/webApp/src/jsMain/resources/export.html
@@ -50,22 +50,40 @@
             </div>
 
             <nav class="sidebar-nav">
-                <div class="nav-section-label">Menu</div>
+                <div class="nav-section-label">Overview</div>
+                <a class="nav-link" href="dashboard.html" id="nav-dashboard">
+                    <span class="material-symbols-outlined">dashboard</span>
+                    <span>Dashboard</span>
+                </a>
                 <a class="nav-link" href="scanner.html" id="nav-scanner">
                     <span class="material-symbols-outlined">qr_code_scanner</span>
-                    <span>Scan</span>
+                    <span>Live Scanner</span>
                 </a>
-                <a class="nav-link" href="index.html" id="nav-history">
+                <a class="nav-link" href="threat.html" id="nav-history">
                     <span class="material-symbols-outlined">history</span>
-                    <span>History</span>
+                    <span>Scan History</span>
                 </a>
+
+                <div class="nav-section-label">Reports</div>
                 <a class="nav-link active" href="export.html" id="nav-export">
                     <span class="material-symbols-outlined filled">file_upload</span>
                     <span>Export</span>
                 </a>
+
+                <div class="nav-section-label">Security</div>
+                <a class="nav-link" href="trust.html" id="nav-allowlist">
+                    <span class="material-symbols-outlined">verified_user</span>
+                    <span>Allow List</span>
+                </a>
                 <a class="nav-link" href="onboarding.html" id="nav-settings">
                     <span class="material-symbols-outlined">settings</span>
                     <span>Settings</span>
+                </a>
+
+                <div class="nav-section-label">Training</div>
+                <a class="nav-link" href="game.html" id="nav-game">
+                    <span class="material-symbols-outlined">sports_esports</span>
+                    <span>Beat the Bot</span>
                 </a>
             </nav>
 
