feat: introduce smooth page transitions by adding dedicated CSS/JS and integrating them across all web app HTML pages, including service worker caching.

--- a/webApp/src/jsMain/resources/export.html
+++ b/webApp/src/jsMain/resources/export.html
@@ -31,6 +31,8 @@
 
     <!-- Export Page Styles -->
     <link href="export.css" rel="stylesheet" />
+    <!-- Page Transitions -->
+    <link href="transitions.css" rel="stylesheet" />
 </head>
 
 <body class="export-body">
@@ -346,6 +348,8 @@
 
     <!-- Kotlin/JS Bundle -->
     <script src="webApp.js"></script>
+    <!-- Page Transitions -->
+    <script src="transitions.js"></script>
     <!-- Export Page Logic -->
     <script src="export.js"></script>
 
