--- a/webApp/src/jsMain/resources/scanner.html
+++ b/webApp/src/jsMain/resources/scanner.html
@@ -31,6 +31,8 @@
 
     <!-- Scanner Page Styles -->
     <link href="scanner.css" rel="stylesheet" />
+    <!-- Page Transitions -->
+    <link href="transitions.css" rel="stylesheet" />
 </head>
 
 <body class="scanner-body">
@@ -336,6 +338,8 @@
     <script src="webApp.js"></script>
     <!-- QR Scanning Library -->
     <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
+    <!-- Page Transitions -->
+    <script src="transitions.js"></script>
     <!-- Scanner Page Logic -->
     <script src="scanner.js"></script>
 
