--- a/webApp/src/jsMain/resources/trust.html
+++ b/webApp/src/jsMain/resources/trust.html
@@ -31,6 +31,8 @@
 
     <!-- Trust Centre Styles -->
     <link href="trust.css" rel="stylesheet" />
+    <!-- Page Transitions -->
+    <link href="transitions.css" rel="stylesheet" />
 </head>
 
 <body class="trust-body">
@@ -67,7 +69,7 @@
                 <a class="nav-link active" href="trust.html" id="nav-trust">
                     <span class="nav-indicator"></span>
                     <span class="material-symbols-outlined filled">verified_user</span>
-                    <span>Trust Centre</span>
+                    <span>Allow List</span>
                 </a>
                 <a class="nav-link" href="onboarding.html" id="nav-settings">
                     <span class="material-symbols-outlined">settings</span>
@@ -83,9 +85,9 @@
 
             <div class="sidebar-footer">
                 <div class="user-profile">
-                    <div class="user-avatar">JD</div>
+                    <div class="user-avatar">JS</div>
                     <div class="user-info">
-                        <p class="user-name">John Doe</p>
+                        <p class="user-name">John Smith</p>
                         <p class="user-plan">Enterprise Plan</p>
                     </div>
                 </div>
@@ -380,6 +382,8 @@
 
     <!-- Kotlin/JS Bundle -->
     <script src="webApp.js"></script>
+    <!-- Page Transitions -->
+    <script src="transitions.js"></script>
     <!-- Trust Centre Logic -->
     <script src="trust.js"></script>
 
