--- a/webApp/src/jsMain/resources/dashboard.html
+++ b/webApp/src/jsMain/resources/dashboard.html
@@ -32,6 +32,8 @@
 
     <!-- Dashboard Styles -->
     <link href="dashboard.css" rel="stylesheet" />
+    <!-- Page Transitions -->
+    <link href="transitions.css" rel="stylesheet" />
 </head>
 
 <body class="dashboard-body">
@@ -388,6 +390,8 @@
 
     <!-- Kotlin/JS Bundle -->
     <script src="webApp.js"></script>
+    <!-- Page Transitions -->
+    <script src="transitions.js"></script>
     <!-- Dashboard Logic -->
     <script src="dashboard.js"></script>
 
