--- a/webApp/src/jsMain/resources/game.html
+++ b/webApp/src/jsMain/resources/game.html
@@ -32,6 +32,8 @@
 
     <!-- Game Styles -->
     <link href="game.css" rel="stylesheet" />
+    <!-- Page Transitions -->
+    <link href="transitions.css" rel="stylesheet" />
 </head>
 
 <body class="game-body">
@@ -384,6 +386,8 @@
 
     <!-- Kotlin/JS Bundle -->
     <script src="webApp.js"></script>
+    <!-- Page Transitions -->
+    <script src="transitions.js"></script>
     <!-- Game Logic -->
     <script src="game.js"></script>
 
