--- a/webApp/src/jsMain/resources/onboarding.html
+++ b/webApp/src/jsMain/resources/onboarding.html
@@ -30,6 +30,8 @@
 
     <!-- Onboarding Page Styles -->
     <link href="onboarding.css" rel="stylesheet" />
+    <!-- Page Transitions -->
+    <link href="transitions.css" rel="stylesheet" />
 </head>
 
 <body class="onboarding-body">
@@ -283,6 +285,8 @@
 
     <!-- Kotlin/JS Bundle -->
     <script src="webApp.js"></script>
+    <!-- Page Transitions -->
+    <script src="transitions.js"></script>
     <!-- Onboarding Page Logic -->
     <script src="onboarding.js"></script>
 
