--- a/webApp/src/jsMain/resources/threat.html
+++ b/webApp/src/jsMain/resources/threat.html
@@ -30,6 +30,8 @@
 
     <!-- Threat Analysis Styles -->
     <link href="threat.css" rel="stylesheet" />
+    <!-- Page Transitions -->
+    <link href="transitions.css" rel="stylesheet" />
 </head>
 
 <body class="threat-body">
@@ -370,6 +372,8 @@
 
     <!-- Kotlin/JS Bundle -->
     <script src="webApp.js"></script>
+    <!-- Page Transitions -->
+    <script src="transitions.js"></script>
     <!-- Threat Analysis Logic -->
     <script src="threat.js"></script>
 
