--- a/webApp/src/jsMain/resources/game.html
+++ b/webApp/src/jsMain/resources/game.html
@@ -34,6 +34,8 @@
     <link href="game.css" rel="stylesheet" />
     <!-- Page Transitions -->
     <link href="transitions.css" rel="stylesheet" />
+    <!-- Shared UI Components -->
+    <link href="shared-ui.css" rel="stylesheet" />
 </head>
 
 <body class="game-body">
@@ -388,6 +390,8 @@
     <script src="webApp.js"></script>
     <!-- Page Transitions -->
     <script src="transitions.js"></script>
+    <!-- Shared UI Components -->
+    <script src="shared-ui.js"></script>
     <!-- Game Logic -->
     <script src="game.js"></script>
 
