--- a/webApp/src/jsMain/resources/dashboard.html
+++ b/webApp/src/jsMain/resources/dashboard.html
@@ -34,6 +34,8 @@
     <link href="dashboard.css" rel="stylesheet" />
     <!-- Page Transitions -->
     <link href="transitions.css" rel="stylesheet" />
+    <!-- Shared UI Components -->
+    <link href="shared-ui.css" rel="stylesheet" />
 </head>
 
 <body class="dashboard-body">
@@ -392,6 +394,8 @@
     <script src="webApp.js"></script>
     <!-- Page Transitions -->
     <script src="transitions.js"></script>
+    <!-- Shared UI Components -->
+    <script src="shared-ui.js"></script>
     <!-- Dashboard Logic -->
     <script src="dashboard.js"></script>
 
