--- a/webApp/src/jsMain/resources/results.html
+++ b/webApp/src/jsMain/resources/results.html
@@ -33,6 +33,8 @@
     <link href="results.css" rel="stylesheet" />
     <!-- Page Transitions -->
     <link href="transitions.css" rel="stylesheet" />
+    <!-- Shared UI Components -->
+    <link href="shared-ui.css" rel="stylesheet" />
 </head>
 
 <body class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-white font-display overflow-hidden">
@@ -340,6 +342,8 @@
     <script src="webApp.js"></script>
     <!-- Page Transitions -->
     <script src="transitions.js"></script>
+    <!-- Shared UI Components -->
+    <script src="shared-ui.js"></script>
     <!-- Results Page Logic -->
     <script src="results.js"></script>
 
