--- a/webApp/src/jsMain/resources/scanner.html
+++ b/webApp/src/jsMain/resources/scanner.html
@@ -33,6 +33,8 @@
     <link href="scanner.css" rel="stylesheet" />
     <!-- Page Transitions -->
     <link href="transitions.css" rel="stylesheet" />
+    <!-- Shared UI Components -->
+    <link href="shared-ui.css" rel="stylesheet" />
 </head>
 
 <body class="scanner-body">
@@ -340,6 +342,8 @@
     <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
     <!-- Page Transitions -->
     <script src="transitions.js"></script>
+    <!-- Shared UI Components -->
+    <script src="shared-ui.js"></script>
     <!-- Scanner Page Logic -->
     <script src="scanner.js"></script>
 
