--- a/webApp/src/jsMain/resources/threat.html
+++ b/webApp/src/jsMain/resources/threat.html
@@ -32,6 +32,8 @@
     <link href="threat.css" rel="stylesheet" />
     <!-- Page Transitions -->
     <link href="transitions.css" rel="stylesheet" />
+    <!-- Shared UI Components -->
+    <link href="shared-ui.css" rel="stylesheet" />
 </head>
 
 <body class="threat-body">
@@ -374,6 +376,8 @@
     <script src="webApp.js"></script>
     <!-- Page Transitions -->
     <script src="transitions.js"></script>
+    <!-- Shared UI Components -->
+    <script src="shared-ui.js"></script>
     <!-- Threat Analysis Logic -->
     <script src="threat.js"></script>
 
