--- a/webApp/src/jsMain/resources/trust.html
+++ b/webApp/src/jsMain/resources/trust.html
@@ -33,6 +33,8 @@
     <link href="trust.css" rel="stylesheet" />
     <!-- Page Transitions -->
     <link href="transitions.css" rel="stylesheet" />
+    <!-- Shared UI Components -->
+    <link href="shared-ui.css" rel="stylesheet" />
 </head>
 
 <body class="trust-body">
@@ -384,6 +386,8 @@
     <script src="webApp.js"></script>
     <!-- Page Transitions -->
     <script src="transitions.js"></script>
+    <!-- Shared UI Components -->
+    <script src="shared-ui.js"></script>
     <!-- Trust Centre Logic -->
     <script src="trust.js"></script>
 
