--- a/webApp/src/jsMain/resources/game.html
+++ b/webApp/src/jsMain/resources/game.html
@@ -54,31 +54,31 @@
 
             <nav class="sidebar-nav">
                 <div class="nav-section-label">Overview</div>
-                <a class="nav-link" href="dashboard.html">
+                <a class="nav-link" href="dashboard.html" id="nav-dashboard">
                     <span class="material-symbols-outlined">dashboard</span>
                     <span>Dashboard</span>
                 </a>
-                <a class="nav-link" href="scanner.html">
+                <a class="nav-link" href="scanner.html" id="nav-scanner">
                     <span class="material-symbols-outlined">qr_code_scanner</span>
                     <span>Live Scanner</span>
                 </a>
-                <a class="nav-link" href="threat.html">
+                <a class="nav-link" href="threat.html" id="nav-history">
                     <span class="material-symbols-outlined">history</span>
                     <span>Scan History</span>
                 </a>
 
                 <div class="nav-section-label">Security</div>
-                <a class="nav-link" href="trust.html">
+                <a class="nav-link" href="trust.html" id="nav-allowlist">
                     <span class="material-symbols-outlined">verified_user</span>
                     <span>Allow List</span>
                 </a>
-                <a class="nav-link" href="onboarding.html">
+                <a class="nav-link" href="onboarding.html" id="nav-settings">
                     <span class="material-symbols-outlined">settings</span>
                     <span>Settings</span>
                 </a>
 
                 <div class="nav-section-label">Training</div>
-                <a class="nav-link active" href="game.html">
+                <a class="nav-link active" href="game.html" id="nav-game">
                     <span class="material-symbols-outlined filled">sports_esports</span>
                     <span>Beat the Bot</span>
                 </a>
