feat: Standardize sidebar footer to a consistent user profile component across all pages and improve profile dropdown positioning.

--- a/webApp/src/jsMain/resources/export.html
+++ b/webApp/src/jsMain/resources/export.html
@@ -92,12 +92,13 @@
             </nav>
 
             <div class="sidebar-footer">
-                <div class="enterprise-badge">
-                    <span class="material-symbols-outlined star-icon">star</span>
-                    <div class="badge-content">
-                        <p class="badge-title">Enterprise Edition</p>
-                        <p class="badge-subtitle">License active until Dec 2025.</p>
+                <div class="user-profile">
+                    <div class="user-avatar">JS</div>
+                    <div class="user-info">
+                        <span class="user-name">John Smith</span>
+                        <span class="user-role">Security Analyst</span>
                     </div>
+                    <span class="material-symbols-outlined">expand_more</span>
                 </div>
             </div>
         </aside>
