--- a/webApp/src/jsMain/resources/results.html
+++ b/webApp/src/jsMain/resources/results.html
@@ -91,8 +91,13 @@
 
             <!-- Sidebar Footer -->
             <div class="sidebar-footer">
-                <div class="version-info">
-                    <span>v2.4.1 (Build 892)</span>
+                <div class="user-profile">
+                    <div class="user-avatar">JS</div>
+                    <div class="user-info">
+                        <span class="user-name">John Smith</span>
+                        <span class="user-role">Security Analyst</span>
+                    </div>
+                    <span class="material-symbols-outlined">expand_more</span>
                 </div>
             </div>
         </aside>
