--- a/webApp/src/jsMain/resources/threat.html
+++ b/webApp/src/jsMain/resources/threat.html
@@ -88,15 +88,13 @@
             </nav>
 
             <div class="sidebar-footer">
-                <div class="version-card">
-                    <div class="version-info">
-                        <span class="version-number">v2.4.1</span>
-                        <span class="version-status">
-                            <span class="status-dot"></span>
-                            Online
-                        </span>
+                <div class="user-profile">
+                    <div class="user-avatar">JS</div>
+                    <div class="user-info">
+                        <span class="user-name">John Smith</span>
+                        <span class="user-role">Security Analyst</span>
                     </div>
-                    <span class="material-symbols-outlined">info</span>
+                    <span class="material-symbols-outlined">expand_more</span>
                 </div>
             </div>
         </aside>
