--- a/webApp/src/jsMain/resources/trust.html
+++ b/webApp/src/jsMain/resources/trust.html
@@ -89,9 +89,10 @@
                 <div class="user-profile">
                     <div class="user-avatar">JS</div>
                     <div class="user-info">
-                        <p class="user-name">John Smith</p>
-                        <p class="user-plan">Enterprise Plan</p>
+                        <span class="user-name">John Smith</span>
+                        <span class="user-role">Security Analyst</span>
                     </div>
+                    <span class="material-symbols-outlined">expand_more</span>
                 </div>
             </div>
         </aside>
