--- a/webApp/src/jsMain/resources/onboarding.html
+++ b/webApp/src/jsMain/resources/onboarding.html
@@ -92,12 +92,13 @@
 
                 <!-- Sidebar Footer -->
                 <div class="sidebar-footer">
-                    <div class="version-badge">
-                        <div class="version-info">
-                            <span class="version-number">v2.4.1</span>
-                            <span class="version-label">Latest Build</span>
+                    <div class="user-profile">
+                        <div class="user-avatar">JS</div>
+                        <div class="user-info">
+                            <span class="user-name">John Smith</span>
+                            <span class="user-role">Security Analyst</span>
                         </div>
-                        <span class="status-dot"></span>
+                        <span class="material-symbols-outlined">expand_more</span>
                     </div>
                 </div>
             </div>
