--- a/webApp/src/jsMain/resources/scanner.html
+++ b/webApp/src/jsMain/resources/scanner.html
@@ -87,12 +87,13 @@
 
             <!-- Sidebar Footer -->
             <div class="sidebar-footer">
-                <div class="user-card">
+                <div class="user-profile">
                     <div class="user-avatar">JS</div>
                     <div class="user-info">
                         <span class="user-name">John Smith</span>
-                        <span class="user-plan">Enterprise Plan</span>
+                        <span class="user-role">Security Analyst</span>
                     </div>
+                    <span class="material-symbols-outlined">expand_more</span>
                 </div>
             </div>
         </aside>
