--- a/webApp/src/jsMain/resources/threat.html
+++ b/webApp/src/jsMain/resources/threat.html
@@ -181,6 +181,21 @@
                         </div>
                     </div>
 
+                    <!-- Scan History Section -->
+                    <div class="history-section">
+                        <div class="section-header" style="margin-bottom: 1rem;">
+                            <h3>
+                                <span class="material-symbols-outlined"
+                                    style="color: #195de6; margin-right: 0.5rem;">history</span>
+                                Scan History
+                            </h3>
+                            <button class="btn-text" id="clearHistoryBtn">Clear All</button>
+                        </div>
+                        <div class="history-list" id="historyList">
+                            <!-- History items will be rendered here by JS -->
+                        </div>
+                    </div>
+
                     <!-- Main Grid -->
                     <div class="threat-grid">
 
